--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FireBaseDemoApp"
         tools:targetApi="31">
+
+
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@drawable/images" />
+
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_color"
+            android:resource="@color/teal_200" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -33,3 +43,7 @@
     </application>
 
 </manifest>
+
+
+
+
